--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ofge/Documents/icog/Prompt-Engineering/pe/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,20 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imagine a regular computer bit like a light switch, it can be either on (1) or off (0).  A quantum bit, or qubit, is like a special light switch that can be both on and off at the same time.  This \"both at once\" state is called superposition.\n",
+      "Imagine a regular computer bit like a light switch, it can be either on or off, representing 1 or 0.  A quantum bit, or qubit, is like a dimmer switch. It can be on, off, or a mixture of both at the same time. This \"both at once\" state is called superposition.\n",
       "\n",
-      "Another important idea is entanglement.  Imagine two of these special light switches linked together magically.  When you flip one, the other flips instantly too, no matter how far apart they are.  Qubits can be entangled like this, their fates linked.\n",
+      "Another key idea is entanglement. Imagine two of these dimmer switches linked together magically.  If you adjust one, the other instantly changes too, no matter how far apart they are.  This connection lets qubits influence each other in powerful ways.\n",
       "\n",
-      "Because qubits can be in multiple states at once, and because they can be entangled, a quantum computer can explore many possibilities simultaneously. This allows it to solve certain types of problems much faster than a regular computer, like breaking complex codes or simulating molecules.\n",
+      "Because qubits can be in multiple states at once, a quantum computer can explore many possibilities simultaneously.  This allows it to solve certain types of problems, like factoring large numbers or simulating molecules, much faster than regular computers.\n",
       "\n",
-      "However, quantum computers are still in their early stages and are very difficult to build and control. They are not meant to replace our everyday computers, but rather to tackle specific problems where their unique abilities shine.\n",
+      "It's still early days for quantum computing.  Building and controlling these \"dimmer switches\" is incredibly difficult, but if we succeed, it could revolutionize fields like medicine, materials science, and artificial intelligence.\n",
       "\n"
      ]
     }
@@ -80,10 +89,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instructional Prompts Output:\n",
+      "1. Preheat oven to 350°F (175°C).\n",
+      "2. Grease and flour a 9x13 inch baking pan.  Alternatively, grease and flour two 9-inch round cake pans.\n",
+      "3. In a large bowl, whisk together 2 cups all-purpose flour, 2 cups granulated sugar, ¾ cup unsweetened cocoa powder, 1 ½ teaspoons baking powder, 1 ½ teaspoons baking soda, and 1 teaspoon salt.\n",
+      "4. Add 2 large eggs, 1 cup milk, ½ cup vegetable oil, 2 teaspoons vanilla extract, and 1 cup boiling water to the dry ingredients.  \n",
+      "5. Beat with an electric mixer on medium speed for 2 minutes. The batter will be thin.\n",
+      "6. Pour batter into the prepared pan(s).\n",
+      "7. Bake for 30-35 minutes for a 9x13 inch pan, or 25-30 minutes for 9-inch round pans, or until a wooden skewer inserted into the center comes out clean.\n",
+      "8. Let the cake cool in the pan for 10 minutes before inverting it onto a wire rack to cool completely.\n",
+      "9. Frost and decorate as desired once the cake is completely cool. \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instructional prompt\n",
+    "prompt = \"\"\"\n",
+    "Provide step-by-step instructions to bake a chocolate cake.\n",
+    "\n",
+    "1. Preheat the oven to 350°F (175°C).\n",
+    "2. Grease and flour a cake pan.\n",
+    "3. Mix flour, sugar, cocoa powder, baking powder, and salt in a bowl.\n",
+    "4. Add eggs, milk, oil, and vanilla extract. Mix until smooth.\n",
+    "5. Pour the batter into the prepared pan.\n",
+    "6. Bake for 30-35 minutes or until a toothpick inserted into the center comes out clean.\n",
+    "7. Let the cake cool before serving.\n",
+    "(e.g., no *, **, or other formatting symbols)\n",
+    "\"\"\"\n",
+    "\n",
+    "# Generate response\n",
+    "response = model.generate_content(prompt)\n",
+    "print(\"Instructional Prompts Output:\")\n",
+    "print(response.text)"
+   ]
   },
   {
    "cell_type": "code",
