--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -132,11 +132,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Role Prompting\n",
+    "\n",
+    "**Description**: Role prompting involves asking the model to act as a specific role (e.g., a teacher, doctor, or chef). This helps tailor the response to the context of the role.\n",
+    "\n",
+    "##### *Use Case*: Ask the model to act as a history teacher and explain the causes of World War I."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "2. Role Prompting\n",
+    "\n",
+    "Description: Role prompting involves asking the model to act as a specific role (e.g., a teacher, doctor, or chef). This helps tailor the response to the context of the role.\n",
+    "\n",
+    "Use Case: Ask the model to act as a history teacher and explain the causes of World War I."
+   ]
   },
   {
    "cell_type": "code",
