--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -144,15 +144,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Role Prompting Output:\n",
+      "Alright class, imagine Europe in 1914 as a powder keg just waiting for a spark.  There were four main problems, let's call them M.A.I.N., that made the situation so tense.\n",
+      "\n",
+      "M is for Militarism.  Many countries, especially Germany and Britain, were building up massive armies and navies.  They were competing to be the strongest, and this created a lot of suspicion and fear.  Everyone was ready for a fight.\n",
+      "\n",
+      "A is for Alliances.  Think of these as groups of friends who promised to help each other if they were attacked.  Europe was divided into two big alliances.  This meant that if one country went to war, their allies would jump in too, making a small conflict much bigger.\n",
+      "\n",
+      "I is for Imperialism.  Many European countries were building empires by taking over land in Africa and Asia.  This competition for colonies created rivalries and resentments.  Countries were fighting for resources and power.\n",
+      "\n",
+      "N is for Nationalism.  This is a strong feeling of pride in one's country, and a belief that your country is better than others.  This can lead to wanting to prove your nation's strength and expand its borders.  It also caused tensions within countries, like Austria-Hungary, which ruled over many different nationalities.\n",
+      "\n",
+      "So, we have this powder keg of militarism, alliances, imperialism, and nationalism.  Then, the spark happened: the assassination of Archduke Franz Ferdinand, the heir to the Austro-Hungarian throne, by a Serbian nationalist.  Austria-Hungary blamed Serbia and declared war.  Because of the alliances, other countries quickly got involved, and a small conflict exploded into a massive world war.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "2. Role Prompting\n",
+    "# Role prompting\n",
+    "prompt = \"\"\"\n",
+    "You are a history teacher. Explain the causes of World War I in simple terms.\n",
     "\n",
-    "Description: Role prompting involves asking the model to act as a specific role (e.g., a teacher, doctor, or chef). This helps tailor the response to the context of the role.\n",
+    "World War I was caused by a combination of factors, including militarism, alliances, imperialism, and nationalism. The assassination of Archduke Franz Ferdinand of Austria-Hungary in 1914 was the immediate trigger.\n",
+    "(e.g., no *, **, or other formatting symbols)\n",
+    "\"\"\"\n",
     "\n",
-    "Use Case: Ask the model to act as a history teacher and explain the causes of World War I."
+    "# Generate response\n",
+    "response = model.generate_content(prompt)\n",
+    "print(\"Role Prompting Output:\")\n",
+    "print(response.text)"
    ]
   },
   {
