--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -195,10 +195,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text Classification Output:\n",
+      "Your classification is correct. The text clearly describes features of a smartphone, placing it firmly in the **Technology** category.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Text classification prompt\n",
+    "prompt = \"\"\"\n",
+    "Classify the following text into one of the categories: Sports, Politics, Technology, Entertainment.\n",
+    "\n",
+    "Text: \"The new smartphone features a 108MP camera and 5G connectivity.\"\n",
+    "Category: Technology\n",
+    "\"\"\"\n",
+    "\n",
+    "# Generate response\n",
+    "response = model.generate_content(prompt)\n",
+    "print(\"Text Classification Output:\")\n",
+    "print(response.text)"
+   ]
   },
   {
    "cell_type": "code",
