--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -135,6 +135,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**The output** provides a clear, step-by-step guide to baking a chocolate cake. Each step is logically ordered, ensuring that even a beginner can follow the instructions. This demonstrates how instructional prompts can generate structured and actionable outputs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2. Role Prompting\n",
     "\n",
     "**Description**: Role prompting involves asking the model to act as a specific role (e.g., a teacher, doctor, or chef). This helps tailor the response to the context of the role.\n",
@@ -186,6 +193,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**The output** explains the causes of World War I in simple terms, as if a history teacher were addressing students. It highlights key factors like militarism, alliances, imperialism, and nationalism, and mentions the assassination of Archduke Franz Ferdinand as the immediate trigger. This demonstrates how role prompting can generate context-specific and educational responses."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 3. Text Classification\n",
     "\n",
     "#### Description: Text classification involves categorizing text into predefined labels or categories. It is useful for organizing and analyzing large amounts of text data.\n",
@@ -221,6 +235,13 @@
     "response = model.generate_content(prompt)\n",
     "print(\"Text Classification Output:\")\n",
     "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The output** correctly classifies the text as \"Technology\" because it discusses features of a smartphone, such as a 108MP camera and 5G connectivity. This demonstrates how text classification can be used to automatically categorize text based on its content."
    ]
   },
   {
