--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -245,11 +245,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Code Generation\n",
+    "#### Description: Code generation involves asking the model to write code to solve a specific problem. This is useful for automating programming tasks or generating boilerplate code.\n",
+    "#### *Use Case*: Generate Python code to check if a number is prime."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Code generation prompt\n",
+    "prompt = \"\"\"\n",
+    "Write a Python function to check if a number is prime.\n",
+    "\n",
+    "Code:\n",
+    "```python\n",
+    "def is_prime(n):\n",
+    "    if n <= 1:\n",
+    "        return False\n",
+    "    for i in range(2, int(n**0.5) + 1):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### *The output* is a Python function that checks if a number is prime. It uses a common algorithm that tests divisibility up to the square root of the number. This demonstrates how code generation can automate the creation of functional and efficient code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Reasoning\n",
+    "\n",
+    "#### Description: Reasoning prompts are used to solve problems that require logical thinking or step-by-step analysis. They help the model break down complex problems into manageable steps.\n",
+    "\n",
+    "#### Use Case: Solve a reasoning problem step-by-step (e.g., calculate the average speed of a train)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Reasoning prompt\n",
+    "prompt = \"\"\"\n",
+    "Solve the following problem step by step:\n",
+    "\n",
+    "Problem: If a train travels 300 miles in 5 hours, what is its average speed?\n",
+    "\n",
+    "Step 1: Calculate the total distance traveled (300 miles).\n",
+    "Step 2: Calculate the total time taken (5 hours).\n",
+    "Step 3: Divide the distance by the time to get the average speed.\n",
+    "Average speed = 300 miles / 5 hours = 60 miles per hour.\n",
+    "\"\"\"\n",
+    "\n",
+    "# Generate response\n",
+    "response = model.generate_content(prompt)\n",
+    "print(\"Reasoning Output:\")\n",
+    "print(response.text)"
+   ]
   },
   {
    "cell_type": "markdown",
