--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -609,20 +609,30 @@
     "\n",
     "**Description of Output:**  \n",
     "The model generates a Python function to calculate the factorial of a number using recursion. The output demonstrates how PAL enables the model to write functional code for specific tasks.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### Summary of Outputs\n",
-    "| **Technique**               | **Output Description**                                                                 |\n",
-    "|-----------------------------|---------------------------------------------------------------------------------------|\n",
-    "| Few-Shot Learning           | Classifies a new email as \"General Inquiry\" based on provided examples.               |\n",
-    "| Chain-of-Thought (CoT)      | Solves a math problem step-by-step, calculating weekly revenue for a bakery.          |\n",
-    "| Self-Consistency            | Verifies a false statement using two distinct reasoning paths.                        |\n",
-    "| Generate Knowledge Prompting| Explains quantum computing in simple terms with key points.                           |\n",
-    "| Program-aided Language Model| Generates Python code to calculate the factorial of a number using recursion.         |\n",
-    "\n",
-    "---\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Summary of Outputs\n",
+    "| **Technique**                     | **Output Description**                                                                 |\n",
+    "|-----------------------------------|---------------------------------------------------------------------------------------|\n",
+    "| **Fundamental Techniques**        |                                                                                       |\n",
+    "| Instructional Prompts             | Provides step-by-step instructions for baking a chocolate cake.                       |\n",
+    "| Role Prompting                    | Explains the causes of World War I as a history teacher.                              |\n",
+    "| Text Classification               | Classifies a text about a smartphone as \"Technology.\"                                 |\n",
+    "| Code Generation                   | Generates a Python function to check if a number is prime.                            |\n",
+    "| Reasoning                         | Calculates the average speed of a train (60 miles per hour).                          |\n",
+    "| **Advanced Techniques**           |                                                                                       |\n",
+    "| Few-Shot Learning                 | Classifies a new email as \"General Inquiry\" based on provided examples.               |\n",
+    "| Chain-of-Thought (CoT) Prompting  | Solves a math problem step-by-step, calculating weekly revenue for a bakery.          |\n",
+    "| Self-Consistency                  | Verifies a false statement using two distinct reasoning paths.                        |\n",
+    "| Generate Knowledge Prompting      | Explains quantum computing in simple terms with key points.                           |\n",
+    "| Program-aided Language Models (PAL)| Generates Python code to calculate the factorial of a number using recursion.  "
    ]
   }
  ],
