--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -34,34 +34,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Imagine a regular computer bit like a light switch, it can be either on or off, 0 or 1.  A quantum bit, or qubit, is like a special light switch that can be both on and off at the same time.  It's like it's dimmed, existing in a combination of both states.  This \"both at once\" ability is called superposition.\n",
-      "\n",
-      "Another key idea is entanglement.  Imagine two of our special light switches linked together magically.  If one is on, the other is instantly off, no matter how far apart they are.  They are linked.  Quantum computers use this connection to perform calculations in a way regular computers can't.\n",
-      "\n",
-      "Because qubits can be in multiple states at once, quantum computers can explore many possibilities simultaneously.  This makes them potentially much faster than regular computers for certain types of problems, like discovering new medicines, creating new materials, or breaking complex codes.\n",
-      "\n",
-      "However, quantum computers are still in their early stages.  They are very fragile and prone to errors. Building and programming them is also extremely difficult.  They won't replace our everyday computers anytime soon, but they hold the promise of solving problems currently beyond our reach.\n",
-      "\n"
-     ]
-    }
-   ],
    "source": [
-    "# Define your prompt\n",
-    "prompt = \"Explain quantum computing in simple terms. (e.g., no *, **, or other formatting symbols).\"\n",
-    "\n",
-    "# Generate a response\n",
-    "response = model.generate_content(prompt)\n",
-    "\n",
-    "# Print the response\n",
-    "print(response.text)"
+    "###  Problem Statement\n",
+    "The rapid advancement of Large Language Models (LLMs) has opened up new possibilities for solving complex real-world problems. However, effectively leveraging these models requires the ability to design and craft prompts that guide the model to generate accurate, relevant, and useful outputs. This project aims to explore and demonstrate the application of **Fundamental** and **Advanced Prompting Techniques** using the **Gemini API** to solve a variety of tasks, including but not limited to:"
    ]
   },
   {
