--- a/notebooks/prompt_engineering.ipynb
+++ b/notebooks/prompt_engineering.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  Problem Statement\n",
+    "The rapid advancement of Large Language Models (LLMs) has opened up new possibilities for solving complex real-world problems. However, effectively leveraging these models requires the ability to design and craft prompts that guide the model to generate accurate, relevant, and useful outputs. This project aims to explore and demonstrate the application of **Fundamental** and **Advanced Prompting Techniques** using the **Gemini API** to solve a variety of tasks.:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Objectives:**\n",
+    "- To demonstrate the effectiveness of **Fundamental Prompting Techniques** in solving basic tasks such as instruction generation, role-based responses, text classification, code generation, and reasoning.\n",
+    "- To explore **Advanced Prompting Techniques** such as Few-Shot Learning, Chain-of-Thought (CoT) Prompting, Self-Consistency, Generate Knowledge Prompting, and Program-aided Language Models (PAL) for solving more complex and nuanced problems.\n",
+    "- To provide a comprehensive set of examples and use cases that showcase the practical applications of these techniques in real-world scenarios.\n",
+    "- To highlight the importance of **Prompt Engineering** as a critical skill for effectively utilizing Large Language Models.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -31,14 +50,6 @@
     "genai.configure(api_key=GEMINI_API_KEY)\n",
     "genai.configure(api_key=GEMINI_API_KEY)\n",
     "model = genai.GenerativeModel('gemini-1.5-pro')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###  Problem Statement\n",
-    "The rapid advancement of Large Language Models (LLMs) has opened up new possibilities for solving complex real-world problems. However, effectively leveraging these models requires the ability to design and craft prompts that guide the model to generate accurate, relevant, and useful outputs. This project aims to explore and demonstrate the application of **Fundamental** and **Advanced Prompting Techniques** using the **Gemini API** to solve a variety of tasks, including but not limited to:"
    ]
   },
   {
